and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 10th, 2014 G.Cosmo                  - geomvol-V09-06-21
- Get rid of deprecated 'register' storage class specifier in source files

March 31st, 2014 G.Cosmo
- Corrected signature of operator=() for G4LogicalBorder/SkinSurface.

February 14th, 2014 G.Cosmo
- Minor cleanup and optimisation to G4EnhancedAllocator.
- Code cleanup in G4GeometryWorkspace and G4GeometryWorkspacePool.

November 19th, 2013 J.Apostolakis         - geomvol-V09-06-20
- Fix(es) for issues identified by Coverity:
   G4GeometryWorkspace: initialisation of data member.
   G4GeometryWorkspacePool: fixed implementation of singleton.

November  8th, 2013 J.Apostolakis         - geomvol-V09-06-19
- Cleanup: reduced verbosity of G4GeometryWorkspace by making
   it optional.  
  Added Set/Get Verbose methods to toggle and view it.

November  7th, 2013 J.Apostolakis         - geomvol-V09-06-18
- Restored the ability to 'clone' Nested Parameterisations.
   This allows the use of Nested Parameterizations with MT.
   This precaution is not needed - 'good' user code will cope with 
   the changing of target solid in each thread.
  Note: The restriction on parameterizations which use multiple types
   of solids remains. 

November  1st, 2013 G.Cosmo               - geomvol-V09-06-17
- Restored use of G4EnhancedVecAllocator in G4NavigationHistory for
  sequential mode.

October 18th, 2013 J.Apostolakis          - geomvol-V09-06-16
- G4GeometryWorkspace: Add new method CloneReplicaSolid, to 
  ensure that the solid for each Replica is separate object.

October 17th, 2013 J.Apostolakis, A.Dotti - geomvol-V09-06-15