@@ -30,7 +30,7 @@ INCFLAGS := -I$(G4BASE)/geometry/management/include \
             -I$(G4BASE)/materials/include \
             -I$(G4BASE)/intercoms/include
 
-LDLIBS   := -lG4csg -lG4geomBoolean -lG4navigation -lG4volumes \
+LDLIBS   := -lG4csg -lG4geomUSolids -lG4geomBoolean -lG4navigation -lG4volumes \
             -lG4magneticfield -lG4geometrymng \
             -lG4materials -lG4graphics_reps \
             -lG4intercoms -lG4UIbasic -lG4UIcommon \
