@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+October 18th, 2014 A.Dotti                - geomvol-V09-06-22
+- Corrected possible data race (reported by DRD) in 
+  G4PVReplica::InitialiseWorker().
+
 April 10th, 2014 G.Cosmo                  - geomvol-V09-06-21
 - Get rid of deprecated 'register' storage class specifier in source files
 
